# FourierMesh

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
blender/: README.md
blender/fouriermesh_blender/: __init__.py  blender_manifest.toml  operators.py  spectral.py  ui.py
examples/: cube_1cm_stl.py  dirac_visualization.py  mesh_laplacian_david.py
src/FourierMesh/: __init__.py  io.py  laplacian.py  mesh_cleanup.py  utils.py
tests/: test_core.py  test_laplacian.py  test_mesh_laplacian_david.py
tests/models/: DavidStatue.3mf  Statue of David.stl  cube_1cm.stl  reconstructed_david_k_1_.stl
