[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "FourierMesh"
version = "0.2.0"
description = "Spectral analysis and low-frequency reconstruction for triangle meshes using the graph Laplacian."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Geneustace Wicaksono" }
]
dependencies = [
  "numpy>=1.24",
  "numpy-stl>=3.1",
  "scipy>=1.11"
]
keywords = ["mesh", "graph-laplacian", "geometry-processing", "spectral", "stl", "3d"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Mathematics",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "matplotlib>=3.8"
]
slicer = [
    "trimesh>=4.0"
]

[project.urls]
Homepage = "https://github.com/SentientPlatypus/FourierMesh"
Repository = "https://github.com/SentientPlatypus/FourierMesh"
Documentation = "https://github.com/SentientPlatypus/FourierMesh#readme"
Issues = "https://github.com/SentientPlatypus/FourierMesh/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
